Authentication based display, linking be to fe, config of all the tokens and secrets
