# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Hello World App
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:3001
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -14,14 +14,33 @@ schemes:
 # format of bodies a client can send (Content-Type)
 consumes:
   - application/json
+  - application/octet-stream
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+  - application/octet-stream
 paths:
-  /tweets:
+  /:
     x-swagger-router-controller: main
     get:
-      description: Returns 'Hello' to the caller
+      description: Streams tweets from the twitter streaming api along with saving into the backend into the DB
+      # used as the method name of the controller
+      operationId: streamTweets  
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Tweets"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /api/tweets:
+    x-swagger-router-controller: main
+    get:
+      description: Returns tweets saved into the DB
       # used as the method name of the controller
       operationId: getTweets
       parameters:
